Fix extra margin on logo and make logo smaller on small screens.

--- a/css/static.css
+++ b/css/static.css
@@ -706,3 +706,11 @@ hr {
   */
 
 }
+
+@media (max-width: 50em) {
+  .logo{
+    display: block;
+    max-width:11em;
+    margin: 0 auto;
+  }
+}
