--- a/src/base.css
+++ b/src/base.css
@@ -69,3 +69,11 @@
   */
 
 }
+
+@media (max-width: 50em) {
+  .logo{
+    display: block;
+    max-width:11em;
+    margin: 0 auto;
+  }
+}
